...
    _isLoading = isLoading;
  }

  Future<String> setPost(Post post, String id) async {
    try {
      await postCollection.doc(id).set(post.toJson());
      return "Post Created";
    } on FirebaseException {
      return "Firebase Exception";
    } catch (e) {
      return "Exception";
    } finally {
      setIsLoading(false);
...
    }
  }

  Future<String> deletePost(String id) async {
    try {
      await postCollection.doc(id).delete();
      return "Post Deleted";
    } on FirebaseException {
      return "Firebase Exception";
    } catch (e) {
      return "Exception";
    }
  }
...
